css/styles.css
.navbar-jumbotron {
    border-bottom: none;
    margin-bottom: 0;
}

.jumbotron {
    padding-top: 10px;
    padding-bottom: 20px;
}

.jumbotron h1 {
    margin-top: 0px;
}

.jumbotron-underlined {
    border-bottom: solid 2px #ccc;
}

@media(max-width: 991px) {
    .jumbotron {
        text-align: center;
    }
}

.jumbotron .carousel, .jumbotron .carousel-inner {
    display: inline-block;
}

.jumbotron .carousel {
    z-index: 1; /* Use separate layer for animated element to prevent font changes during transition */
}

@media(min-width: 992px) {
    .jumbotron .carousel {
        float: right;
    }
}
 
.carousel-control {
    opacity: 0;
    background: #f0f0f0!important;
}

.carousel-control:hover {
    opacity: 0.65;
}

.carousel-control.right span {
    right: 30%;
}

#screenshots .carousel-indicators {
    bottom: -19px;
}

#screenshots img {
    width: 450px;
    max-height: 267px;
    background-color: transparent;
}

.glyphicon-small {
    font-size: 85%;
}

.nuget-install {
    background-color: #202020;
    border: 4px solid silver;
    border-radius: 3px;
    color: #E2E2E2;
    display: block;
    padding: 9.5px 15px;
}

.nuget-install a {
    text-decoration: none;
    color: #f0f0f0;
}

.feature {
    display: table;
}

.feature > * {
    display: table-cell;
}

.feature-icon {
    font-size: 20px;
    width: 1%;
    padding-right: 10px;
}

.feature-body h3 {
    font-size: 24px;
    margin-bottom: 5px;
}

pre {
    border-color: #eee;
    border: none;
    overflow: auto;
    word-wrap: normal;
    white-space: pre;
}

.quickstart hr {
    margin: 10px 0;
}

pre .type {
    color: #2B91AF;
}

pre .string {
    color: #A01714;
}

pre .keywd {
    color: #182AFC;
}

pre .comm {
    color: #aaa;
}

[id^=___plusone] { width:75px !important; }

.main-twitter-button {
    vertical-align: bottom;
    display: inline-block;
}

.fb-share-button {
    vertical-align: bottom;
    margin-right: 5px;
    margin-bottom: 5px;
}

.lb-outerContainer {
    background: transparent;
}

@media (min-width:1200px) {
    .col-lg-offset-1-5 {
        margin-left: 12.5%
    }
}

.plan {
    text-align: center;
    background-color: #fff;
    padding-bottom: 30px;
}

.plan .plan-title {
    background-color: #999;
    color: #fff;
    padding: 12px 16px;
    border-top-left-radius: 4px;
    border-top-right-radius: 4px;
}

.plan .plan-body {
    border-bottom-left-radius: 4px;
    border-bottom-right-radius: 4px;
    border: solid 1px #ccc;
    border-top: none;
    padding: 20px;
}

.plan .plan-title h2 {
    margin: 0;
    font-weight: lighter;
}

.plan .plan-items {
    text-align: left;
    padding-left: 30px;
}

.plan .plan-items > * {
    margin-bottom: 10px;
}

.plan .plan-item-spacer {
    visibility: hidden;
}

.plan .plan-price {
    margin: 20px 0;
    border-top: solid 1px #ddd;
}

.plan .plan-price h3 {
    font-size: 40px;
    vertical-align: top;
    line-height: 1;
    font-weight: lighter;
    text-transform: uppercase;
}

.plan .plan-price h3 span {
    font-size: 20px;
    vertical-align: top;
    position: relative;
    margin: 6px 0 0 -7px;
    display: inline-block;
}

.plan .plan-price h4 {
    color: #666;
    font-size: 14px;
    font-weight: lighter;
    text-transform: lowercase;
}

.plan .btn {
    padding: 10px 40px;
    text-transform: uppercase;
    font-weight: lighter;
}

.screenshots img {
    width: 100%;
}

.page-header {
    margin-top: 0;
}

.tabs-below > .nav-tabs,
.tabs-right > .nav-tabs,
.tabs-left > .nav-tabs {
    border-bottom: 0;
}

.tab-content > .tab-pane,
.pill-content > .pill-pane {
    display: none;
}

.tab-content > .active,
.pill-content > .active {
    display: block;
}

.tabs-below > .nav-tabs {
    border-top: 1px solid #ddd;
}

.tabs-below > .nav-tabs > li {
    margin-top: -1px;
    margin-bottom: 0;
}

.tabs-below > .nav-tabs > li > a {
    -webkit-border-radius: 0 0 4px 4px;
       -moz-border-radius: 0 0 4px 4px;
            border-radius: 0 0 4px 4px;
}

.tabs-below > .nav-tabs > li > a:hover,
.tabs-below > .nav-tabs > li > a:focus {
    border-top-color: #ddd;
    border-bottom-color: transparent;
}

.tabs-below > .nav-tabs > .active > a,
.tabs-below > .nav-tabs > .active > a:hover,
.tabs-below > .nav-tabs > .active > a:focus {
    border-color: transparent #ddd #ddd #ddd;
}

.tabs-left > .nav-tabs > li,
.tabs-right > .nav-tabs > li {
    float: none;
}

.tabs-left > .nav-tabs > li > a,
.tabs-right > .nav-tabs > li > a {
    min-width: 74px;
    margin-right: 0;
    margin-bottom: 3px;
}

.tabs-left > .nav-tabs {
    float: left;
    margin-right: 19px;
    border-right: 1px solid #ddd;
}

.tabs-left > .nav-tabs > li > a {
    margin-right: -1px;
    -webkit-border-radius: 4px 0 0 4px;
       -moz-border-radius: 4px 0 0 4px;
            border-radius: 4px 0 0 4px;
}

.tabs-left > .nav-tabs > li > a:hover,
.tabs-left > .nav-tabs > li > a:focus {
    border-color: #eeeeee #dddddd #eeeeee #eeeeee;
}

.tabs-left > .nav-tabs .active > a,
.tabs-left > .nav-tabs .active > a:hover,
.tabs-left > .nav-tabs .active > a:focus {
    border-color: #ddd transparent #ddd #ddd;
    *border-right-color: #ffffff;
}

.tabs-right > .nav-tabs {
    float: right;
    margin-left: 19px;
    border-left: 1px solid #ddd;
}

.tabs-right > .nav-tabs > li > a {
    margin-left: -1px;
    -webkit-border-radius: 0 4px 4px 0;
       -moz-border-radius: 0 4px 4px 0;
            border-radius: 0 4px 4px 0;
}

.tabs-right > .nav-tabs > li > a:hover,
.tabs-right > .nav-tabs > li > a:focus {
    border-color: #eeeeee #eeeeee #eeeeee #dddddd;
}

.tabs-right > .nav-tabs .active > a,
.tabs-right > .nav-tabs .active > a:hover,
.tabs-right > .nav-tabs .active > a:focus {
    border-color: #ddd #ddd #ddd transparent;
    *border-left-color: #ffffff;
}

.post-meta {
    padding: 0;
    list-style: none;
    color: #999;
    line-height: 32px;
}

.post-meta a {
    color: #999;
}

.post-meta > li {
    display: inline-block;
}

.post-meta > li+li:before {
    content: " ";
    padding: 0 3px;
}

.post-separator {
    margin: 40px 0;
}

.sub-header {
    float: right;
    font-size: 16px;
    margin-top: 16px;
    color: #bbb;
    margin-left: 10px;
}

.sub-header a {
    color: #bbb;
}

table {
    width: 100%;
    margin-bottom: 20px;
}

table>thead>tr>th, 
table>tbody>tr>th, 
table>tfoot>tr>th, 
table>thead>tr>td, 
table>tbody>tr>td, 
table>tfoot>tr>td {
    padding: 5px;
    line-height: 1.42857143;
    vertical-align: top;
    border-top: 1px solid #ddd;
}

table>thead>tr>th {
    vertical-align: bottom;
    border-bottom: 2px solid #ddd;
}

table>caption+thead>tr:first-child>th, 
table>colgroup+thead>tr:first-child>th, 
table>thead:first-child>tr:first-child>th, 
table>caption+thead>tr:first-child>td, 
table>colgroup+thead>tr:first-child>td, 
table>thead:first-child>tr:first-child>td {
    border-top: 0;
}

.supported-storages {
    width: 100%; 
    margin-top: 20px;
}

.supported-storages td {
    vertical-align: middle;
}

.customers blockquote {
    font-size: 16px;
    padding: 10px 18px;
}

